5 Feature Analysis Updated

--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTEBOOK FOR 5 FEATURES"
+    "# Notebook 2: 5 Features Analysis\n",
+    "\n",
+    "# this notebook tests the QSVC and classical SVC models using the top 5 features most correlated with the label."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed23f245",
    "metadata": {},
    "outputs": [],
@@ -37,17 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d1838dae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['27', 'F', 'No', 'No', 'No', 'Euthyroid',\n",
+       "       'Single nodular goiter-left', 'No', 'Micropapillary', 'Uni-Focal',\n",
+       "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d704b938",
    "metadata": {},
    "outputs": [],
@@ -69,10 +84,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dc40975a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PEARSON CORRELATIONS (ABS SORTED)\n",
+      "10    0.733376\n",
+      "15    0.708957\n",
+      "12    0.632323\n",
+      "11    0.556201\n",
+      "14    0.449137\n",
+      "9     0.383776\n",
+      "13    0.354360\n",
+      "2     0.333243\n",
+      "1     0.328189\n",
+      "0     0.257659\n",
+      "7     0.182530\n",
+      "4     0.174407\n",
+      "3     0.136073\n",
+      "6     0.131801\n",
+      "5     0.067758\n",
+      "8     0.003272\n",
+      "dtype: float64\n",
+      "\n",
+      "Top 2 features: [10, 15]\n",
+      "Top 5 features: [10, 15, 12, 11, 14]\n",
+      "Top 10 features: [10, 15, 12, 11, 14, 9, 13, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# convert to pandas so correlation works\n",
     "X_df = pd.DataFrame(X)\n",
@@ -97,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1aeffc36",
    "metadata": {},
    "outputs": [],
@@ -114,10 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d4f0dcd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2. 2. 0. 0. 0.]\n",
+      "Shape X: (383, 5)\n",
+      "Shape y: (383,)\n",
+      "Shape X: (2, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "# basic printing and shape checking to confirm dataset size\n",
     "print(X[0])\n",
@@ -130,10 +186,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "49459cb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "QSVC accuracy: 0.961038961038961\n"
+     ]
+    }
+   ],
    "source": [
     "# MODEL 1: QSVC + QuantumKernel (main baseline model)\n",
     "from sklearn.utils import resample\n",
@@ -161,10 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "31e4b21c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 0.6814560890197754 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# this measures how long it takes to train the QSVC model\n",
     "# DOES NOT AFFECT ACCURACY\n",
@@ -178,10 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3094f32c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical SVC (RBF) accuracy: 0.961038961038961\n"
+     ]
+    }
+   ],
    "source": [
     "# MODEL 2: Classical SVC (RBF baseline)\n",
     "# this is the normal, classical SVC\n",
@@ -198,10 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "eeb359d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Callable SVC + Quantum Kernel accuracy: 0.961038961038961\n"
+     ]
+    }
+   ],
    "source": [
     "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
     "# the classical SVC calls the quantum kernel during training\n",
@@ -216,10 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3e219f27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precomputed SVC + Quantum Kernel accuracy: 0.961038961038961\n"
+     ]
+    }
+   ],
    "source": [
     "# MODEL 4: Classical SVC using precomputed Quantum Kernel\n",
     "# SVC + QuantumTrainableKernel (Precomputed)\n",
@@ -238,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "d215060c",
    "metadata": {},
    "outputs": [],
@@ -280,38 +377,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3f6f8ce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌──────────┐                    »\n",
+      "q_0: ┤ Ry(θ[0]) ├──■─────────────────»\n",
+      "     ├──────────┤┌─┴─┐               »\n",
+      "q_1: ┤ Ry(θ[1]) ├┤ X ├──■────────────»\n",
+      "     ├──────────┤└───┘┌─┴─┐          »\n",
+      "q_2: ┤ Ry(θ[2]) ├─────┤ X ├──■───────»\n",
+      "     ├──────────┤     └───┘┌─┴─┐     »\n",
+      "q_3: ┤ Ry(θ[3]) ├──────────┤ X ├──■──»\n",
+      "     ├──────────┤          └───┘┌─┴─┐»\n",
+      "q_4: ┤ Ry(θ[4]) ├───────────────┤ X ├»\n",
+      "     └──────────┘               └───┘»\n",
+      "«     ┌─────────────────────────────────────────┐\n",
+      "«q_0: ┤0                                        ├\n",
+      "«     │                                         │\n",
+      "«q_1: ┤1                                        ├\n",
+      "«     │                                         │\n",
+      "«q_2: ┤2 ZZFeatureMap(x[0],x[1],x[2],x[3],x[4]) ├\n",
+      "«     │                                         │\n",
+      "«q_3: ┤3                                        ├\n",
+      "«     │                                         │\n",
+      "«q_4: ┤4                                        ├\n",
+      "«     └─────────────────────────────────────────┘\n",
+      "Trainable parameters: θ, ['θ[0]', 'θ[1]', 'θ[2]', 'θ[3]', 'θ[4]']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_564/3761597244.py:29: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
+      "  sampler = Sampler()\n"
+     ]
+    }
+   ],
    "source": [
-    "# test\n",
     "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
     "\n",
     "\n",
     "num_features = X_train.shape[1]  # e.g., 5 features\n",
     "\n",
-    "# --- Trainable rotation layer: one parameter per qubit ---\n",
+    "# trainable rotation layer: one parameter per qubit\n",
     "fm0 = QuantumCircuit(num_features)\n",
     "training_params = ParameterVector(\"θ\", num_features)\n",
     "\n",
     "for q in range(num_features):\n",
     "    fm0.ry(training_params[q], q)\n",
     "\n",
-    "# Add simple entangling layer (linear chain)\n",
+    "# add simple entangling layer (linear chain)\n",
     "for i in range(num_features - 1):\n",
     "    fm0.cx(i, i+1)\n",
     "\n",
-    "# --- Static ZZFeatureMap ---\n",
+    "# static ZZFeatureMap \n",
     "fm1 = ZZFeatureMap(num_features, reps=1, entanglement='linear')\n",
     "\n",
-    "# Compose trainable + fixed map\n",
+    "# compose trainable + fixed map\n",
     "fm = fm0.compose(fm1)\n",
     "\n",
     "print(circuit_drawer(fm))\n",
     "print(f\"Trainable parameters: {training_params}\")\n",
     "\n",
-    "# --- Trainable kernel ---\n",
+    "# trainable kernel \n",
     "from qiskit.primitives import Sampler\n",
     "sampler = Sampler()\n",
     "\n",
@@ -320,7 +454,7 @@
     "    training_parameters=training_params\n",
     ")\n",
     "\n",
-    "# --- SPSA optimizer ---\n",
+    "# SPSA optimizer\n",
     "cb_qkt = QKTCallback()\n",
     "spsa_opt = SPSA(\n",
     "    maxiter=15,\n",
@@ -329,7 +463,7 @@
     "    perturbation=0.05\n",
     ")\n",
     "\n",
-    "# --- Kernel trainer ---\n",
+    "# kernel trainer \n",
     "initial_point = np.random.rand(num_features) * np.pi\n",
     "qkt = QuantumKernelTrainer(\n",
     "    quantum_kernel=quant_kernel,\n",
@@ -341,70 +475,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e659ce64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
-    "\n",
-    "\n",
-    "num_features = X_train.shape[1]  # should be 5\n",
-    "\n",
-    "# Trainable rotation layer\n",
-    "fm0 = QuantumCircuit(num_features)\n",
-    "training_params = ParameterVector(\"θ\", 1)\n",
-    "\n",
-    "for q in range(num_features):\n",
-    "    fm0.ry(training_params[0], q)\n",
-    "\n",
-    "# Static ZZFeatureMap\n",
-    "fm1 = ZZFeatureMap(num_features, reps=1, entanglement='linear')\n",
-    "\n",
-    "# Compose trainable + fixed map\n",
-    "fm = fm0.compose(fm1)\n",
-    "\n",
-    "print(circuit_drawer(fm))\n",
-    "print(f\"Trainable parameters: {training_params}\")\n",
-    "\n",
-    "# Trainable kernel\n",
-    "from qiskit.primitives import Sampler\n",
-    "sampler = Sampler()\n",
-    "\n",
-    "quant_kernel = TrainableFidelityQuantumKernel(\n",
-    "    feature_map=fm,\n",
-    "    training_parameters=training_params,\n",
-    "    \n",
-    ")\n",
-    "\n",
-    "# SPSA\n",
-    "cb_qkt = QKTCallback()\n",
-    "spsa_opt = SPSA(\n",
-    "    maxiter=15,\n",
-    "    callback=cb_qkt.callback,\n",
-    "    learning_rate=0.05,\n",
-    "    perturbation=0.05\n",
-    ")\n",
-    "\n",
-    "# Kernel trainer\n",
-    "qkt = QuantumKernelTrainer(\n",
-    "    quantum_kernel=quant_kernel,\n",
-    "    loss=\"svc_loss\",\n",
-    "    optimizer=spsa_opt,\n",
-    "    initial_point=[np.pi / 2]\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "b104437c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training trainable quantum kernel on subset...\n",
+      "{   'optimal_circuit': None,\n",
+      "    'optimal_parameters': {   ParameterVectorElement(θ[0]): np.float64(2.748093189796113),\n",
+      "                              ParameterVectorElement(θ[1]): np.float64(-0.23896726702487792),\n",
+      "                              ParameterVectorElement(θ[2]): np.float64(0.03495879926204001),\n",
+      "                              ParameterVectorElement(θ[3]): np.float64(2.776890071694905),\n",
+      "                              ParameterVectorElement(θ[4]): np.float64(2.1794648609602785)},\n",
+      "    'optimal_point': array([ 2.74809319, -0.23896727,  0.0349588 ,  2.77689007,  2.17946486]),\n",
+      "    'optimal_value': np.float64(8.588295219942461),\n",
+      "    'optimizer_evals': 45,\n",
+      "    'optimizer_result': None,\n",
+      "    'optimizer_time': None,\n",
+      "    'quantum_kernel': <qiskit_machine_learning.kernels.trainable_fidelity_quantum_kernel.TrainableFidelityQuantumKernel object at 0x7ade5f3a1ac0>}\n"
+     ]
+    }
+   ],
    "source": [
     "# SECTION 2 — Subset + Training Trainable Kernel\n",
     "\n",
-    "# Use a small subset of training samples to reduce runtime\n",
+    "# use a small subset of training samples to reduce runtime\n",
     "subset_idx = np.random.choice(len(X_small), size=50, replace=False)\n",
     "X_subset = X_small[subset_idx]\n",
     "y_subset = y_small[subset_idx]\n",
@@ -419,19 +517,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "97ce318e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trainable kernel QSVC test accuracy: 0.930\n",
+      "Hybrid SVC (precomputed optimal kernel) test score: 0.896\n",
+      "Precomputed kernel classification test score: 0.896\n"
+     ]
+    }
+   ],
    "source": [
     "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
     "\n",
-    "# --- Quantum SVC ---\n",
+    "\n",
+    "# Quantum SVC\n",
+    "\n",
+    "\n",
+    "# create a QSVC using the quantum kernel that was optimized earlier\n",
     "qsvc = QSVC(quantum_kernel=optimized_kernel)\n",
+    "\n",
+    "# fit the QSVC model on the small training set\n",
     "qsvc.fit(X_small, y_small)\n",
     "\n",
+    "# we use the trained QSVC to predict labels on the test set\n",
     "labels_test = qsvc.predict(X_test_small)\n",
     "\n",
+    "# calculate balanced accuracy on the test set\n",
     "accuracy_test = metrics.balanced_accuracy_score(y_true=y_test_small, y_pred=labels_test)\n",
     "print(f\"Trainable kernel QSVC test accuracy: {accuracy_test:.3f}\")\n",
     "\n",
@@ -440,19 +556,22 @@
     "# Hybrid SVC + Optimal Quantum Kernel (fixed version)\n",
     "\n",
     "\n",
-    "# IMPORTANT: use a small subset to avoid VERY long runtime\n",
+    "# using a small subset of training data to keep runtime reasonable\n",
     "subset_idx = np.random.choice(len(X_small), size=50, replace=False)\n",
     "X_train_small = X_small[subset_idx]\n",
     "y_train_small = y_small[subset_idx]\n",
     "\n",
-    "# Precompute kernel matrices\n",
+    "# precompute kernel matrices\n",
+    "# K_train: kernel values between training samples\n",
+    "# K_test: kernel values between test samples and training samples\n",
     "adhoc_matrix_train = optimized_kernel.evaluate(X_train_small)\n",
     "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_train_small)\n",
     "\n",
-    "# IMPORTANT FIX: kernel=\"precomputed\" (NOT ==)\n",
+    "# train a classical SVC using the precomputed quantum kernel\n",
     "adhoc_svc = SVC(kernel=\"precomputed\")\n",
     "adhoc_svc.fit(adhoc_matrix_train, y_train_small)\n",
     "\n",
+    "# evaluate the classical SVC on the test kernel matrix\n",
     "adhoc_score_precomputed_kernel = adhoc_svc.score(\n",
     "    adhoc_matrix_test,\n",
     "    y_test_small\n",
@@ -464,15 +583,15 @@
     "# Classical SVC (full precomputed kernel)\n",
     "\n",
     "\n",
-    "# Optional: this version is slow, so you can keep it or remove it.\n",
-    "# If you keep it, it is safest to use the SAME subset:\n",
-    "\n",
+    "# optional: slower version, but it uses the same subset for consistency\n",
     "K_train = optimized_kernel.evaluate(X_train_small)\n",
     "K_test  = optimized_kernel.evaluate(X_test_small, X_train_small)\n",
     "\n",
+    "# train classical SVC on precomputed kernel\n",
     "svc_pre = SVC(kernel=\"precomputed\")\n",
     "svc_pre.fit(K_train, y_train_small)\n",
     "\n",
+    "# evaluate accuracy on test set\n",
     "pre_score = svc_pre.score(K_test, y_test_small)\n",
     "print(f\"Precomputed kernel classification test score: {pre_score:.3f}\")\n"
    ]
@@ -483,6 +602,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
