--- a/04_Notebook_1.ipynb
+++ b/04_Notebook_1.ipynb
@@ -11,7 +11,10 @@
    },
    "outputs": [],
    "source": [
-    "# Notebook 1: 2 Feature Analysis"
+    "# Notebook 1: 2 Feature Analysis\n",
+    "\n",
+    "# this notebook tests the QSVC and classical SVC models using only the top 2 features most correlated with the label.\n",
+    "# the goal is to evaluate model performance with minimal input features."
    ]
   },
   {
