--- a/04_Notebook_3.ipynb
+++ b/04_Notebook_3.ipynb
@@ -1,1 +1,503 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c98b17",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Notebook 3: 10 Features Analysis\n",
+    "\n",
+    "# this notebook tests the QSVC and classical SVC models using the top 10 features most correlated with the label. \n",
+    "# the purpose is to observe whether increasing the number of features improves or reduces model performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd540b59",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# load data\n",
+    "import csv\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "filename = \"datasets/Thyroid_Diff.csv\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    header = next(reader)\n",
+    "    data = [row for row in reader]\n",
+    "\n",
+    "data = np.array(data, dtype=object)\n",
+    "\n",
+    "# split features from labels\n",
+    "X = data[:, :-1]    # features\n",
+    "y = data[:, -1]     # labels\n",
+    "     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e31ea780",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "X[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85caa2ca",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# converts string values into integers \n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# encode X\n",
+    "for i in range(X.shape[1]):\n",
+    "    le = LabelEncoder()\n",
+    "    X[:, i] = le.fit_transform(X[:, i])\n",
+    "\n",
+    "X = X.astype(float)\n",
+    "\n",
+    "# encode y\n",
+    "y_le = LabelEncoder()\n",
+    "y = y_le.fit_transform(y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7384416c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# convert to pandas so correlation works\n",
+    "X_df = pd.DataFrame(X)\n",
+    "y_s = pd.Series(y)\n",
+    "\n",
+    "# compute correlation\n",
+    "correlations = X_df.apply(lambda col: col.corr(y_s))\n",
+    "correlations_abs = correlations.abs().sort_values(ascending=False)\n",
+    "\n",
+    "print(\"\\nPEARSON CORRELATIONS (ABS SORTED)\")\n",
+    "print(correlations_abs)\n",
+    "\n",
+    "# select top-k features\n",
+    "top2 = correlations_abs.head(2).index.tolist()\n",
+    "top5 = correlations_abs.head(5).index.tolist()\n",
+    "top10 = correlations_abs.head(10).index.tolist()\n",
+    "\n",
+    "print(\"\\nTop 2 features:\", top2)\n",
+    "print(\"Top 5 features:\", top5)\n",
+    "print(\"Top 10 features:\", top10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094927e3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# how many features to use\n",
+    "X = X[:, top10]     # <-- CHANGE THIS (top2, top5, top10)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "603a78d3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# basic printing and shape checking to confirm dataset size\n",
+    "print(X[0])\n",
+    "print(\"Shape X:\",X.shape)\n",
+    "print(\"Shape y:\", y.shape)\n",
+    "\n",
+    "X_new = X[:][0:2]\n",
+    "print(\"Shape X:\",X_new.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12e6d3a4",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# MODEL 1: QSVC + QuantumKernel (main baseline model)\n",
+    "from sklearn.utils import resample\n",
+    "from qiskit.circuit.library import ZZFeatureMap\n",
+    "from qiskit_machine_learning.kernels import FidelityStatevectorKernel\n",
+    "from qiskit_machine_learning.algorithms import QSVC\n",
+    "\n",
+    "# reduce for speed\n",
+    "X_small, y_small = resample(X_train, y_train, n_samples=300, random_state=42)\n",
+    "X_test_small = X_test[:100]\n",
+    "y_test_small = y_test[:100]\n",
+    "\n",
+    "# quantum feature map\n",
+    "feature_map = ZZFeatureMap(feature_dimension=X_small.shape[1], reps=1)\n",
+    "\n",
+    "quantum_kernel = FidelityStatevectorKernel(feature_map=feature_map)\n",
+    "\n",
+    "qsvc = QSVC(quantum_kernel=quantum_kernel)\n",
+    "qsvc.fit(X_small, y_small)\n",
+    "\n",
+    "score_qsvc = qsvc.score(X_test_small, y_test_small)\n",
+    "print(\"\\nQSVC accuracy:\", score_qsvc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f83c2cd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# this measures how long it takes to train the QSVC model\n",
+    "# DOES NOT AFFECT ACCURACY\n",
+    "\n",
+    "import time\n",
+    "start = time.time()\n",
+    "qsvc.fit(X_small, y_small)\n",
+    "print(\"Training took\", time.time() - start, \"seconds\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2274dc",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# MODEL 2: Classical SVC (RBF baseline)\n",
+    "# this is the normal, classical SVC\n",
+    "# this is a good baseline to compare how good the quantum methods are\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc_rbf = SVC(kernel=\"rbf\")\n",
+    "svc_rbf.fit(X_small, y_small)\n",
+    "\n",
+    "score_rbf = svc_rbf.score(X_test_small, y_test_small)\n",
+    "print(\"Classical SVC (RBF) accuracy:\", score_rbf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a46a28fc",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
+    "# the classical SVC calls the quantum kernel during training\n",
+    "\n",
+    "svc_callable = SVC(kernel=quantum_kernel.evaluate)\n",
+    "svc_callable.fit(X_small, y_small)\n",
+    "\n",
+    "score_callable = svc_callable.score(X_test_small, y_test_small)\n",
+    "print(\"Callable SVC + Quantum Kernel accuracy:\", score_callable)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ff64ee9",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# MODEL 4: Classical SVC using precomputed Quantum Kernel\n",
+    "# SVC + QuantumTrainableKernel (Precomputed)\n",
+    "# the quantum kernel matrix is computed BEFORE training\n",
+    "\n",
+    "# this is the quantum kernel matrix calculation\n",
+    "K_train = quantum_kernel.evaluate(X_small)\n",
+    "K_test  = quantum_kernel.evaluate(X_test_small, X_small)\n",
+    "\n",
+    "svc_pre = SVC(kernel=\"precomputed\")\n",
+    "svc_pre.fit(K_train, y_small)\n",
+    "\n",
+    "score_pre = svc_pre.score(K_test, y_test_small)\n",
+    "print(\"Precomputed SVC + Quantum Kernel accuracy:\", score_pre)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a85090d2",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# MODEL 5: Trainable Quantum Kernel\n",
+    "\n",
+    "# external imports \n",
+    "from qiskit import QuantumCircuit\n",
+    "from qiskit.circuit import ParameterVector\n",
+    "from qiskit.circuit.library import ZZFeatureMap\n",
+    "from qiskit_machine_learning.kernels import TrainableFidelityQuantumKernel\n",
+    "from qiskit_machine_learning.kernels.algorithms import QuantumKernelTrainer\n",
+    "from qiskit_machine_learning.optimizers import SPSA\n",
+    "from qiskit_machine_learning.algorithms import QSVC\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn import metrics\n",
+    "from qiskit.visualization import circuit_drawer\n",
+    "import numpy as np\n",
+    "\n",
+    "class QKTCallback:\n",
+    "    def __init__(self):\n",
+    "        self._data = [[] for _ in range(5)]\n",
+    "\n",
+    "    def callback(self, x0, x1=None, x2=None, x3=None, x4=None):\n",
+    "        self._data[0].append(x0)\n",
+    "        self._data[1].append(x1)\n",
+    "        self._data[2].append(x2)\n",
+    "        self._data[3].append(x3)\n",
+    "        self._data[4].append(x4)\n",
+    "\n",
+    "    def get_callback_data(self):\n",
+    "        return self._data\n",
+    "\n",
+    "    def clear_callback_data(self):\n",
+    "        self._data = [[] for _ in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "225a04ce",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
+    "\n",
+    "\n",
+    "num_features = X_train.shape[1] \n",
+    "\n",
+    "# trainable rotation layer: one parameter per qubit\n",
+    "fm0 = QuantumCircuit(num_features)\n",
+    "training_params = ParameterVector(\"θ\", num_features)\n",
+    "\n",
+    "for q in range(num_features):\n",
+    "    fm0.ry(training_params[q], q)\n",
+    "\n",
+    "# add simple entangling layer (linear chain)\n",
+    "for i in range(num_features - 1):\n",
+    "    fm0.cx(i, i+1)\n",
+    "\n",
+    "# static ZZFeatureMap \n",
+    "fm1 = ZZFeatureMap(num_features, reps=1, entanglement='linear')\n",
+    "\n",
+    "# compose trainable + fixed map\n",
+    "fm = fm0.compose(fm1)\n",
+    "\n",
+    "print(circuit_drawer(fm))\n",
+    "print(f\"Trainable parameters: {training_params}\")\n",
+    "\n",
+    "# trainable kernel \n",
+    "from qiskit.primitives import Sampler\n",
+    "sampler = Sampler()\n",
+    "\n",
+    "quant_kernel = TrainableFidelityQuantumKernel(\n",
+    "    feature_map=fm,\n",
+    "    training_parameters=training_params\n",
+    ")\n",
+    "# SPSA optimizer\n",
+    "cb_qkt = QKTCallback()\n",
+    "spsa_opt = SPSA(\n",
+    "    maxiter=15,\n",
+    "    callback=cb_qkt.callback,\n",
+    "    learning_rate=0.05,\n",
+    "    perturbation=0.05\n",
+    ")\n",
+    "\n",
+    "# kernel trainer \n",
+    "initial_point = np.random.rand(num_features) * np.pi\n",
+    "qkt = QuantumKernelTrainer(\n",
+    "    quantum_kernel=quant_kernel,\n",
+    "    loss=\"svc_loss\",\n",
+    "    optimizer=spsa_opt,\n",
+    "    initial_point=initial_point\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ed35e5",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# SECTION 2 — Subset + Training Trainable Kernel\n",
+    "\n",
+    "# use a small subset of training samples to reduce runtime\n",
+    "subset_idx = np.random.choice(len(X_small), size=50, replace=False)\n",
+    "X_subset = X_small[subset_idx]\n",
+    "y_subset = y_small[subset_idx]\n",
+    "\n",
+    "print(\"Training trainable quantum kernel on subset...\")\n",
+    "qka_results = qkt.fit(X_subset, y_subset)\n",
+    "\n",
+    "optimized_kernel = qka_results.quantum_kernel\n",
+    "print(qka_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32bc52fe",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
+    "\n",
+    "\n",
+    "# Quantum SVC\n",
+    "\n",
+    "\n",
+    "# create a QSVC using the quantum kernel that was optimized earlier\n",
+    "qsvc = QSVC(quantum_kernel=optimized_kernel)\n",
+    "\n",
+    "# fit the QSVC model on the small training set\n",
+    "qsvc.fit(X_small, y_small)\n",
+    "\n",
+    "# we use the trained QSVC to predict labels on the test set\n",
+    "labels_test = qsvc.predict(X_test_small)\n",
+    "\n",
+    "# calculate balanced accuracy on the test set\n",
+    "accuracy_test = metrics.balanced_accuracy_score(y_true=y_test_small, y_pred=labels_test)\n",
+    "print(f\"Trainable kernel QSVC test accuracy: {accuracy_test:.3f}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Hybrid SVC + Optimal Quantum Kernel (fixed version)\n",
+    "\n",
+    "\n",
+    "# using a small subset of training data to keep runtime reasonable\n",
+    "subset_idx = np.random.choice(len(X_small), size=50, replace=False)\n",
+    "X_train_small = X_small[subset_idx]\n",
+    "y_train_small = y_small[subset_idx]\n",
+    "\n",
+    "# precompute kernel matrices\n",
+    "# K_train: kernel values between training samples\n",
+    "# K_test: kernel values between test samples and training samples\n",
+    "adhoc_matrix_train = optimized_kernel.evaluate(X_train_small)\n",
+    "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_train_small)\n",
+    "\n",
+    "# train a classical SVC using the precomputed quantum kernel\n",
+    "adhoc_svc = SVC(kernel=\"precomputed\")\n",
+    "adhoc_svc.fit(adhoc_matrix_train, y_train_small)\n",
+    "\n",
+    "# evaluate the classical SVC on the test kernel matrix\n",
+    "adhoc_score_precomputed_kernel = adhoc_svc.score(\n",
+    "    adhoc_matrix_test,\n",
+    "    y_test_small\n",
+    ")\n",
+    "print(f\"Hybrid SVC (precomputed optimal kernel) test score: {adhoc_score_precomputed_kernel:.3f}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Classical SVC (full precomputed kernel)\n",
+    "\n",
+    "\n",
+    "# optional: slower version, but it uses the same subset for consistency\n",
+    "K_train = optimized_kernel.evaluate(X_train_small)\n",
+    "K_test  = optimized_kernel.evaluate(X_test_small, X_train_small)\n",
+    "\n",
+    "# train classical SVC on precomputed kernel\n",
+    "svc_pre = SVC(kernel=\"precomputed\")\n",
+    "svc_pre.fit(K_train, y_train_small)\n",
+    "\n",
+    "# evaluate accuracy on test set\n",
+    "pre_score = svc_pre.score(K_test, y_test_small)\n",
+    "print(f\"Precomputed kernel classification test score: {pre_score:.3f}\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
