--- a/04_Notebook_3.ipynb
+++ b/04_Notebook_3.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17c98b17",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Notebook 3: 10 Features Analysis\n",
@@ -21,11 +17,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd540b59",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load data\n",
@@ -44,33 +36,37 @@
     "# split features from labels\n",
     "X = data[:, :-1]    # features\n",
     "y = data[:, -1]     # labels\n",
-    "     \n"
+    "     "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e31ea780",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['27', 'F', 'No', 'No', 'No', 'Euthyroid',\n",
+       "       'Single nodular goiter-left', 'No', 'Micropapillary', 'Uni-Focal',\n",
+       "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "\n",
-    "X[0]\n"
+    "X[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "85caa2ca",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# converts string values into integers \n",
@@ -90,14 +86,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7384416c",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PEARSON CORRELATIONS (ABS SORTED)\n",
+      "10    0.733376\n",
+      "15    0.708957\n",
+      "12    0.632323\n",
+      "11    0.556201\n",
+      "14    0.449137\n",
+      "9     0.383776\n",
+      "13    0.354360\n",
+      "2     0.333243\n",
+      "1     0.328189\n",
+      "0     0.257659\n",
+      "7     0.182530\n",
+      "4     0.174407\n",
+      "3     0.136073\n",
+      "6     0.131801\n",
+      "5     0.067758\n",
+      "8     0.003272\n",
+      "dtype: float64\n",
+      "\n",
+      "Top 2 features: [10, 15]\n",
+      "Top 5 features: [10, 15, 12, 11, 14]\n",
+      "Top 10 features: [10, 15, 12, 11, 14, 9, 13, 2, 1, 0]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# convert to pandas so correlation works\n",
     "X_df = pd.DataFrame(X)\n",
@@ -124,11 +146,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "094927e3",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -138,19 +156,26 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "603a78d3",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  2.  0.  0.  0.  1.  0.  0.  0. 11.]\n",
+      "Shape X: (383, 10)\n",
+      "Shape y: (383,)\n",
+      "Shape X: (2, 10)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# basic printing and shape checking to confirm dataset size\n",
     "print(X[0])\n",
@@ -158,19 +183,24 @@
     "print(\"Shape y:\", y.shape)\n",
     "\n",
     "X_new = X[:][0:2]\n",
-    "print(\"Shape X:\",X_new.shape)\n"
+    "print(\"Shape X:\",X_new.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "12e6d3a4",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "QSVC accuracy: 0.8831168831168831\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 1: QSVC + QuantumKernel (main baseline model)\n",
     "from sklearn.utils import resample\n",
@@ -197,14 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4f83c2cd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 2.07167387008667 seconds\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# this measures how long it takes to train the QSVC model\n",
     "# DOES NOT AFFECT ACCURACY\n",
@@ -212,19 +246,23 @@
     "import time\n",
     "start = time.time()\n",
     "qsvc.fit(X_small, y_small)\n",
-    "print(\"Training took\", time.time() - start, \"seconds\")\n"
+    "print(\"Training took\", time.time() - start, \"seconds\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ea2274dc",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical SVC (RBF) accuracy: 0.8051948051948052\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 2: Classical SVC (RBF baseline)\n",
     "# this is the normal, classical SVC\n",
@@ -235,19 +273,23 @@
     "svc_rbf.fit(X_small, y_small)\n",
     "\n",
     "score_rbf = svc_rbf.score(X_test_small, y_test_small)\n",
-    "print(\"Classical SVC (RBF) accuracy:\", score_rbf)\n"
+    "print(\"Classical SVC (RBF) accuracy:\", score_rbf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a46a28fc",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Callable SVC + Quantum Kernel accuracy: 0.8831168831168831\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
     "# the classical SVC calls the quantum kernel during training\n",
@@ -256,19 +298,23 @@
     "svc_callable.fit(X_small, y_small)\n",
     "\n",
     "score_callable = svc_callable.score(X_test_small, y_test_small)\n",
-    "print(\"Callable SVC + Quantum Kernel accuracy:\", score_callable)\n"
+    "print(\"Callable SVC + Quantum Kernel accuracy:\", score_callable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3ff64ee9",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precomputed SVC + Quantum Kernel accuracy: 0.8831168831168831\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# MODEL 4: Classical SVC using precomputed Quantum Kernel\n",
     "# SVC + QuantumTrainableKernel (Precomputed)\n",
@@ -282,18 +328,14 @@
     "svc_pre.fit(K_train, y_small)\n",
     "\n",
     "score_pre = svc_pre.score(K_test, y_test_small)\n",
-    "print(\"Precomputed SVC + Quantum Kernel accuracy:\", score_pre)\n"
+    "print(\"Precomputed SVC + Quantum Kernel accuracy:\", score_pre)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a85090d2",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# MODEL 5: Trainable Quantum Kernel\n",
@@ -331,14 +373,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "225a04ce",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌──────────┐                                             »\n",
+      "q_0: ┤ Ry(θ[0]) ├──■──────────────────────────────────────────»\n",
+      "     ├──────────┤┌─┴─┐                                        »\n",
+      "q_1: ┤ Ry(θ[1]) ├┤ X ├──■─────────────────────────────────────»\n",
+      "     ├──────────┤└───┘┌─┴─┐                                   »\n",
+      "q_2: ┤ Ry(θ[2]) ├─────┤ X ├──■────────────────────────────────»\n",
+      "     ├──────────┤     └───┘┌─┴─┐                              »\n",
+      "q_3: ┤ Ry(θ[3]) ├──────────┤ X ├──■───────────────────────────»\n",
+      "     ├──────────┤          └───┘┌─┴─┐                         »\n",
+      "q_4: ┤ Ry(θ[4]) ├───────────────┤ X ├──■──────────────────────»\n",
+      "     ├──────────┤               └───┘┌─┴─┐                    »\n",
+      "q_5: ┤ Ry(θ[5]) ├────────────────────┤ X ├──■─────────────────»\n",
+      "     ├──────────┤                    └───┘┌─┴─┐               »\n",
+      "q_6: ┤ Ry(θ[6]) ├─────────────────────────┤ X ├──■────────────»\n",
+      "     ├──────────┤                         └───┘┌─┴─┐          »\n",
+      "q_7: ┤ Ry(θ[7]) ├──────────────────────────────┤ X ├──■───────»\n",
+      "     ├──────────┤                              └───┘┌─┴─┐     »\n",
+      "q_8: ┤ Ry(θ[8]) ├───────────────────────────────────┤ X ├──■──»\n",
+      "     ├──────────┤                                   └───┘┌─┴─┐»\n",
+      "q_9: ┤ Ry(θ[9]) ├────────────────────────────────────────┤ X ├»\n",
+      "     └──────────┘                                        └───┘»\n",
+      "«     ┌──────────────────────────────────────────────────────────────────┐\n",
+      "«q_0: ┤0                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_1: ┤1                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_2: ┤2                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_3: ┤3                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_4: ┤4                                                                 ├\n",
+      "«     │  ZZFeatureMap(x[0],x[1],x[2],x[3],x[4],x[5],x[6],x[7],x[8],x[9]) │\n",
+      "«q_5: ┤5                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_6: ┤6                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_7: ┤7                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_8: ┤8                                                                 ├\n",
+      "«     │                                                                  │\n",
+      "«q_9: ┤9                                                                 ├\n",
+      "«     └──────────────────────────────────────────────────────────────────┘\n",
+      "Trainable parameters: θ, ['θ[0]', 'θ[1]', 'θ[2]', 'θ[3]', 'θ[4]', 'θ[5]', 'θ[6]', 'θ[7]', 'θ[8]', 'θ[9]']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_565/3379643469.py:28: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
+      "  sampler = Sampler()\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
     "\n",
@@ -394,14 +490,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f7ed35e5",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training trainable quantum kernel on subset...\n",
+      "{   'optimal_circuit': None,\n",
+      "    'optimal_parameters': {   ParameterVectorElement(θ[0]): np.float64(2.8244651029596697),\n",
+      "                              ParameterVectorElement(θ[1]): np.float64(2.9490119764641967),\n",
+      "                              ParameterVectorElement(θ[2]): np.float64(1.1942386996881018),\n",
+      "                              ParameterVectorElement(θ[3]): np.float64(3.105640843779657),\n",
+      "                              ParameterVectorElement(θ[4]): np.float64(0.42595351842058804),\n",
+      "                              ParameterVectorElement(θ[5]): np.float64(0.8094485557051567),\n",
+      "                              ParameterVectorElement(θ[6]): np.float64(1.6146677479359137),\n",
+      "                              ParameterVectorElement(θ[7]): np.float64(3.293470544084122),\n",
+      "                              ParameterVectorElement(θ[8]): np.float64(1.5035600889429486),\n",
+      "                              ParameterVectorElement(θ[9]): np.float64(4.09886989067085)},\n",
+      "    'optimal_point': array([2.8244651 , 2.94901198, 1.1942387 , 3.10564084, 0.42595352,\n",
+      "       0.80944856, 1.61466775, 3.29347054, 1.50356009, 4.09886989]),\n",
+      "    'optimal_value': np.float64(13.5513752501595),\n",
+      "    'optimizer_evals': 45,\n",
+      "    'optimizer_result': None,\n",
+      "    'optimizer_time': None,\n",
+      "    'quantum_kernel': <qiskit_machine_learning.kernels.trainable_fidelity_quantum_kernel.TrainableFidelityQuantumKernel object at 0x764fce0308c0>}\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# SECTION 2 — Subset + Training Trainable Kernel\n",
     "\n",
@@ -419,14 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "32bc52fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trainable kernel QSVC test accuracy: 0.939\n",
+      "Hybrid SVC (precomputed optimal kernel) test score: 0.909\n",
+      "Precomputed kernel classification test score: 0.909\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
     "\n",
@@ -494,8 +618,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
